Small fix for textarea

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="keyword">Ujicoba kata kunci</div>
         </div>
         <div id="textInputContainer">
-            <textarea name="textInput" id="textInput"></textarea>
+            <textarea name="textInput" id="textInput" oninput='this.style.height = "";this.style.height = this.scrollHeight - 16 + "px"'></textarea>
             <button id="plusButton">
                 <div>+</div>
             </button>
