Fix pop up animations on open and page load

--- a/src/index.html
+++ b/src/index.html
@@ -54,8 +54,8 @@
             </button>
         </div>
     </section>
-    <div id="darkOverlay" class="center-popup hidden"></div>
-    <div id="recommendationPopUp" class="center-popup hidden">
+    <div id="darkOverlay" class="center-popup hidden" style="display: none;"></div>
+    <div id="recommendationPopUp" class="center-popup hidden" style="display: none;">
         <h3>Kata kunci</h3>
         <div id="recommendationKeywordContainer">
         </div>
