Minor bug fix for shortcut and STT

--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
         <div class="content">
             <h1>Obrolin.</h1>
             <p>
-                Obrolin adalah website pembantu penyandang disleksia dalam mencari informasi.
+                Obrolin (Obrolan Linguistik) adalah website pembantu penyandang disleksia dalam mencari informasi.
                 Dengan menggunakan AI GPT 3.5, kami menyediakan pengalaman tanya-jawab yang
                 inklusif bagi penyandang disleksia supaya dapat mudah dalam mendapatkan pengetahuan
                 dari internet.
