Embedded tutorial youtube iframe

--- a/src/index.html
+++ b/src/index.html
@@ -78,32 +78,23 @@
             <h1>Obrolin.</h1>
             <p>
                 Obrolin (Obrolan Linguistik) adalah website pembantu penyandang disleksia dalam mencari informasi.
-                Dengan menggunakan AI GPT 3.5, kami menyediakan pengalaman tanya-jawab yang
-                inklusif bagi penyandang disleksia supaya dapat mudah dalam mendapatkan pengetahuan
+                Dengan menggunakan AI, kami menyediakan pengalaman tanya-jawab yang
+                inklusif bagi penyandang disleksia supaya lebih mudah mendapatkan pengetahuan
                 dari internet.
+            </p>
+            <p>
+                Anda hanya perlu memasukkan satu atau lebih kata kunci, kami akan menyediakan rekomendasi 
+                pertanyaan untuk memastikan anda mendapatkan jawaban yang paling sesuai. 
+                Tidak perlu khawatir salah mengetik dan menyusun kalimat!
             </p>
             <h3>Fitur Utama</h3>
             <ul>
-                <li>Sistem rekomendasi pertanyaan yang berbasis kata kunci dari pengguna</li>
-                <li>Jawaban pertanyaan yang akurat dengan menggunakan kecerdasan buatan</li>
-                <li>Pengenalan suara secara real-time untuk memasukkan kata kunci</li>
-                <li>Sistem pengubah teks-ke-suara guna memudahkan aksesibilitas pengguna</li>
+                <li>Sistem rekomendasi pertanyaan berbasis kata kunci</li>
+                <li>Jawaban pertanyaan yang efektif</li>
+                <li>Pengenalan suara secara real-time</li>
+                <li>Sistem pengubah teks-ke-suara</li>
             </ul>
-            <h3>Limitasi</h3>
-            <ul>
-                <li>    
-                    AI dapat memberikan informasi yang kurang akurat sehingga diperlukan pengecekan ulang
-                    di sumber lainnya untuk memastikan kebenaran informasi.
-                </li>
-                <li>
-                    AI hanya memiliki pengetahuan sebelum September 2021 dan tidak memiliki
-                    informasi untuk kejadian yang berlangsung setelahnya.
-                </li>
-                <li>
-                    Fitur aksesibilitas seperti pengenalan suara hanya didukung di peramban Google Chrome pada Windows. Pastikan telah 
-                    <a href="https://support.microsoft.com/id-id/windows/paket-bahasa-untuk-windows-a5094319-a92d-18de-5b53-1cfc697cfca8">menginstall support bahasa Indonesia</a> di pengaturan sistem dengan fitur pengenalan suara terpasang.
-                </li>
-            </ul>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/XE5IsWpXWWU" frameborder="0" allowfullscreen></iframe> 
         </div>
         <button id="informationCloseButton">Lanjutkan</button>
     </div>
